# rocket-sim

./: .gitignore  CMakeLists.txt  README.md
include/: model.hpp
src/Model/: CMakeLists.txt  model.cpp
src/Simulator/: CMakeLists.txt  main.cpp
